samples/_failures_safe/1761167721_c6b8c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c1f1e8c.c: In function ‘main’:
./samples/SAFE/__tmp_2c1f1e8c.c:155:5: error: expected expression at end of input
  155 |     if (input_len ==
      |     ^~
./samples/SAFE/__tmp_2c1f1e8c.c:155:5: error: expected declaration or statement at end of input
